kube/nuc01/ov-rustfs/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ov-rustfs
  namespace: ov
spec:
  selector:
    app: ov-rustfs
  ports:
    - name: s3
      port: 9000
      targetPort: 9000
    - name: console
      port: 9001
      targetPort: 9001
